--- a/app/styles/footer.module.css
+++ b/app/styles/footer.module.css
@@ -1,16 +1,17 @@
 .footer_container {
     background: linear-gradient(135deg, var(--custom-brown), var(--custom-dark-green));
-    position: sticky;
+    /* position: sticky;
     bottom: 0;
-    z-index: -1;
+    z-index: 1; */
     padding: 4rem;
 }
 
 .footer {
     display: flex;
     color: white;
+    flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: self-start;
+    align-items: start;
 }
 
 .footer_logo_name {
@@ -38,4 +39,26 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+}
+.footer_link{
+    position: relative;
+    transition: all 0.4s ease-in-out;
+    width: fit-content;
+}
+.footer_link::after{
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    height: 2px;
+    width: 0%;
+    background-color: white;
+    transition: width 0.25s ease;
+}
+.footer_link:hover::after{
+    width: 100%;
+}
+.footer_link:hover{
+    letter-spacing: 0.05rem;
+
 }
