Update:Check components design

--- a/app/styles/home.module.css
+++ b/app/styles/home.module.css
@@ -30,6 +30,10 @@
 .intro_text span {
     font-weight: 600;
 }
+.check_components_container{
+    display: flex;
+    justify-content: space-between;
+}
 
 .check_container {
     margin-top: 2rem;
