--- a/app/styles/home.module.css
+++ b/app/styles/home.module.css
@@ -51,7 +51,7 @@
     margin-bottom: 0.5rem;
 }
 
-.check_btn {
+.check_btn, .close_btn {
     margin-top: 3rem;
     padding: 8px 20px;
     border-radius: 1.5rem;
@@ -89,7 +89,7 @@
     font-size: 1rem;
     font-weight: 600;
 }
-.check_btn:hover, .check_component:hover {
+.check_btn:hover, .check_component:hover, .close_btn:hover {
     transform: translateY(-2px);
     box-shadow: 0 10px 30px #ff8c4558;
 }
@@ -162,6 +162,11 @@
 
 .icon {
     font-size: 1.5rem;
+}
+.close_btn{
+    color: var(--custom-brown);
+    border: 1px solid;
+    background: transparent;
 }
 @media screen and (max-width:800px) {
     .intro_image{
