--- a/app/styles/detail_modal.module.css
+++ b/app/styles/detail_modal.module.css
@@ -1,3 +1,13 @@
+.details_form_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* width: 100%; */
+}
+.details_form{
+    display: flex;
+    flex-direction: column;
+}
 .form_title{
     font-size: 1.5rem;
     font-weight: 600;
