--- a/app/styles/detail_modal.module.css
+++ b/app/styles/detail_modal.module.css
@@ -1,7 +1,7 @@
 .details_form_container{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     /* width: 100%; */
 }
 .details_form{
@@ -12,8 +12,25 @@
     font-size: 1.5rem;
     font-weight: 600;
     margin-bottom: 1rem;
+    text-align: center;
+    padding-bottom: 1rem;
+    border-bottom: 5px solid var(--custom-brown);
 }
 .radio_container{
     border-bottom: 1px solid var(--custom-brown);
     margin-bottom: 1rem;
+}
+.form_buttons{
+    display: flex;
+    justify-content: end;
+    gap: 1.5rem;
+}
+.form_buttons button:hover{
+    transform: translateY(-2px);
+    box-shadow: 0 10px 30px #ff8c4558;
+}
+.close_btn{
+    color: var(--custom-brown);
+    border: 1px solid;
+    background: transparent;
 }
