--- a/app/styles/blog.module.css
+++ b/app/styles/blog.module.css
@@ -116,3 +116,8 @@
     border: 1px solid var(--custom-brown);
     background-repeat: no-repeat;
 }
+.article_content{
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    border-bottom: 2px solid var(--custom-brown);
+}
