--- a/app/styles/about.module.css
+++ b/app/styles/about.module.css
@@ -1,4 +1,21 @@
 .about_container{
     min-height: 100vh;
     max-width: 800px;
+    margin: 0 auto;
+    padding: 2rem;
+}
+.title{
+    font-family: var(--font-poppins);
+    width: fit-content;
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: var(--custom-brown);
+    margin-bottom: 2rem;
+    border-bottom: 4px solid var(--custom-brown);
+}
+.title span{
+    color: var(--custom-dark-green);
+}
+.content_text span{
+    color: var(--custom-brown);
 }
